# cardano-layer-two-api

./: README.md  manage.py
api/: contracts.py  helper.py  models.py  package.json  serializers.py  tests.py  validation.py  verify-signature.js  views.py
api/tests/: test_helper_api.py
api/tests/entries/: test_delete_utxo_api.py  test_get_utxo_api.py  test_hash_api.py  test_new_account_api.py  test_new_utxo_api.py  test_total_ada_api.py  test_validate_api.py
api/tests/tasks/: test_task_api.py
interact/: addNewUTxO.sh  basic.sh  buildTransacion.sh  createNewAccount.sh  deleteUTxOs.sh  getAccountUTxOs.sh  randomNumber.sh
locking-contract/locking-contract/: locking_contract.plutus
locking-contract/locking-contract/pab/: Main.hs
locking-contract/locking-contract/src/: CheckFuncs.hs  DataTypes.hs  LockingContract.hs
locking-contract/scripts/: balances.sh
locking-contract/scripts/data/: buyer_datum.json
locking_contract/: cabal.project
locking_contract/locking-contract/: locking_contract.plutus  order-book.cabal
locking_contract/locking-contract/src/: CheckFuncs.hs  DataTypes.hs  LockingContract.hs
locking_contract/scripts/: addMember.sh  addToSideChain.sh  balances.sh  closeSideChain.sh  createSideChain.sh  decreaseMajority.sh  increaseMajority.sh  justSubmit.sh  removeFromSideChain.sh  removeMember.sh  tradeToken.sh
locking_contract/scripts/data/: add_redeemer.json  datum.json  datum_add.json  datum_increase.json  remove_redeemer.json
sidechain_rest_api/: asgi.py  settings.py  urls.py  wsgi.py
