cabal-version:          2.4
name:                   locking-contract
version:                1.0
description:            A plutus script for retreiving funds.
author:                 The Ancient Kraken
maintainer:             logical.mechanism@protonmail.com
license:                Apache-2.0

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages
  

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      LockingContract
                        DataTypes
                        CheckFuncs

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , text
                      , containers
                      , plutus-contract
                      , aeson
                      , openapi3

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable locking-contract
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              locking-contract.hs
  
  ghc-options:          -threaded 
                        -rtsopts 
                        "-with-rtsopts=-T"
                        -O2

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , locking-contract
                      , plutus-ledger-api
                      , bytestring

